--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Created by https://www.toptal.com/developers/gitignore/api/eclipse,java,intellij
 # Edit at https://www.toptal.com/developers/gitignore?templates=eclipse,java,intellij
 
+#Eclipse Core#
+.project
+.classpath
+
 ### Eclipse ###
 .metadata
 bin/
